# secondbrain

./: .env.example  .gitignore  BUN_MIGRATION.md  README.md  SETUP.md  biome.json  bunfig.toml  package-lock.json  package.json  release.config.mjs  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
pi-setup/: docker-compose.yml  init-db.sh  init.sql
scripts/: doctor-deps.sh  generate-dmg-background.sh  prebuild-macos-cleanup.sh  sync-version.mjs
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: ai.rs  db.rs  main.rs  vector.rs
src/components/: Habits.test.tsx  Habits.tsx  Search.test.tsx  Search.tsx  Upload.tsx  Viewer.test.tsx  Viewer.tsx
src/lib/: api.test.ts  api.ts
