[package]
name = "secondbrain"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-all", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio", "tls-native-tls", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
pgvector = { version = "0.4", features = ["sqlx"] }
base64 = "0.21"

[profile.release]
codegen-units = 1
lto = true

[patch.crates-io]
block = { path = "vendor/block" }

[features]
custom-protocol = ["tauri/custom-protocol"]
